first working one.

--- a/modification/manifest.json
+++ b/modification/manifest.json
@@ -37,7 +37,8 @@
         "unlimitedStorage",
         "idle",
         "chrome://favicon/",
-        "identity"
+        "identity",
+		"identity.email"
     ],
     "optional_permissions": [
         "identity.email",
